--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.pokemongobot.PokemonGoBot</mainClass>
+                            <mainClass>com.pokemongobot.Main</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -64,6 +64,16 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.6.2</version>
+        </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
