--- a/config.json.example
+++ b/config.json.example
@@ -1,9 +1,7 @@
 {
   "bots": {
-
     "bot_comment": "add as many bots as you want, recommend 5 bots per proxy or niantic will ip ban",
     "BotOne": {
-
       "proxy_comment": "proxy to use leave, ip, port, user, password blank to not use proxy",
       "proxy": {
         "ip": "192.168.2.1",
@@ -12,13 +10,11 @@
         "user": "trump",
         "password": "build_it_tall"
       },
-
       "google_description": "google login, replace with ptc for ptc login",
       "google": {
         "username": "example_username",
         "password": "example_password"
       },
-
       "location": {
         "latitude": "80",
         "longitude": "100",
@@ -32,11 +28,12 @@
         "time_reset_comment": "time until bot resets to start location in seconds, set to -1 to ignore",
         "time_reset": "240"
       },
-
+      "farming_comment": "bot objectives can be set here. example: catch_pokemon: false, loot_pokestops: false, manage_eggs: true, bot will just walk around to incubate egg",
       "farming": {
         "catch_pokemon": "true",
         "loot_pokestops": "true",
-
+        "manage_eggs_comment": "automatically incubate eggs etc",
+        "manage_eggs": "true",
         "evolve_pokemon": {
           "evolve": "true",
           "keep_unevolved_comment": "add pokemon names you don't want evolved. list of names in pokemon_names.txt",
@@ -45,7 +42,6 @@
             "KADABRA"
           ]
         },
-
         "transfer_pokemon": {
           "transfer": "true",
           "iv_over_cp_comment": "treat iv as more important than cp",
@@ -60,7 +56,6 @@
             "CATERPIE",
             "PIDGEY"
           ],
-
           "protect_comment": "add pokemon names you don't want to transfer. list of names in pokemon_names.txt",
           "protect": [
             "EEVEE",
